# Bewu

./: .gitattributes  .tokeignore  Cargo.toml  IDEAS.md  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  source-files.js  src-files.js
bewu/: .gitignore  Cargo.toml  all.html  config.template.toml  fn.async_main.html  fn.main.html  index.html  sidebar-items.js  struct.AppState.html  struct.Config.html
bewu/app_state/: index.html  sidebar-items.js  struct.AppState.html
bewu/app_state/database/: constant.GET_KITSU_ANIME_SQL.html  constant.SETUP_SQL.html  constant.UPSERT_KITSU_ANIME_SQL.html  constant.UPSERT_KITSU_EPISODE_SQL.html  index.html  sidebar-items.js  struct.Database.html  trait.AsSlice.html
bewu/app_state/database/model/: index.html  sidebar-items.js  struct.KitsuAnime.html  struct.KitsuAnimeEpisode.html
bewu/app_state/kitsu/: enum.KitsuTaskMessage.html  fn.get_anime_task_impl.html  fn.kitsu_get_anime.html  fn.kitsu_search.html  fn.kitsu_task_impl.html  fn.search_task_impl.html  index.html  sidebar-items.js  struct.KitsuTask.html  type.SearchCache.html  type.SearchRequestMap.html  type.SearchResult.html
bewu/app_state/vidstreaming/: enum.DownloadStateUpdate.html  enum.VidstreamingTaskMessage.html  fn.download_task_impl.html  fn.get_episode_file_name.html  fn.vidstreaming_task_impl.html  index.html  sidebar-items.js  struct.CloneDownloadState.html  struct.DownloadState.html  struct.VidstreamingEpisode.html  struct.VidstreamingTask.html
bewu/config/: index.html  sidebar-items.js  struct.Config.html  struct.ConfigLogging.html
bewu/logger/: fn.init.html  index.html
bewu/routes/: fn.not_found_error.html  fn.routes.html  index.html  sidebar-items.js
bewu/routes/api/: enum.ApiVidstreamingDownloadStateUpdate.html  fn.api_anime_get.html  fn.api_kitsu_anime.html  fn.api_kitsu_anime_id.html  fn.api_kitsu_anime_id_episodes.html  fn.api_kitsu_episodes_id.html  fn.api_vidstreaming_id.html  fn.api_vidstreaming_id_download.html  fn.routes.html  fn.serialize_arc_str.html  fn.serialize_optional_arc_str.html  index.html  sidebar-items.js  struct.ApiError.html  struct.ApiKitsuAnime.html  struct.ApiKitsuEpisode.html  struct.ApiVidstreamingDownloadState.html  struct.ApiVidstreamingEpisode.html  struct.KitsuSearchParams.html
bewu/sql/: setup.sql  upsert_kitsu_anime.sql  upsert_kitsu_episode.sql
bewu/src/: app_state.rs  config.rs  logger.rs  main.rs  routes.rs  util.rs
bewu/src/app_state/: database.rs  kitsu.rs  vidstreaming.rs
bewu/src/app_state/database/: model.rs
bewu/src/routes/: api.rs
bewu/src/util/: async_lock_file.rs
bewu/util/: index.html  sidebar-items.js  struct.AbortJoinHandle.html  struct.AsyncLockFile.html
bewu/util/async_lock_file/: enum.Message.html  fn.async_lock_file_thread_impl.html  index.html  sidebar-items.js  struct.AsyncLockFile.html
bewu_util/: all.html  enum.StateUpdateItem.html  fn.parse_ffmpeg_time.html  fn.state_update_channel.html  fn.try_exists.html  index.html  sidebar-items.js  struct.AbortJoinHandle.html  struct.AsyncLockFile.html  struct.AsyncTimedLruCache.html  struct.StateUpdateRx.html  struct.StateUpdateStream.html  struct.StateUpdateTx.html  trait.StateChannelState.html  trait.StateUpdateChannelState.html
debian_sysroot_build/: all.html  fn.get_debian_arch.html  fn.get_gcc_triple.html  fn.main.html  index.html  sidebar-items.js  struct.DebianSysrootBuilder.html  struct.Options.html
deploy_deb/: all.html  fn.authenticate.html  fn.generate_remote_deb_file_name.html  fn.init_ssh_session.html  fn.install_package.html  fn.main.html  fn.verify_known_hosts.html  index.html  sidebar-items.js  struct.Options.html
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
hls_parser/: all.html  enum.Error.html  enum.PlaylistType.html  enum.VideoRange.html  index.html  sidebar-items.js  struct.InvalidUriError.html  struct.MasterPlaylist.html  struct.MediaPlaylist.html  struct.ParsePlaylistTypeError.html  struct.ParseVideoRangeError.html  struct.VariantStream.html  type.UriReferenceStr.html  type.UriReferenceString.html
kitsu/: all.html  enum.AgeRating.html  enum.Error.html  enum.Status.html  enum.Subtype.html  index.html  sidebar-items.js  struct.Anime.html  (+4 more)
lib/bewu-util-rs/: Cargo.toml
lib/bewu-util-rs/src/: abort_join_handle.rs  async_lock_file.rs  async_mutex_map.rs  async_timed_cache_cell.rs  async_timed_lru_cache.rs  download_hls.rs  lib.rs  parse_ffmpeg_time.rs  state_update_channel.rs  try_exists.rs
lib/debian-sysroot-build-rs/: Cargo.toml  README.md  dump.txt
lib/debian-sysroot-build-rs/src/: debian_sysroot.rs  main.rs
lib/deploy-deb-rs/: Cargo.toml  README.md
lib/deploy-deb-rs/src/: lib.rs  main.rs
lib/kitsu-rs/: Cargo.toml
lib/kitsu-rs/src/: anime.rs  episode.rs  lib.rs  types.rs
lib/kitsu-rs/test_data/: 3-gatsu_no_Lion_2nd_Season_search.json  5_Centimeter_per_Second_search.json  cowboy_bebop_search.json  food_search.json  high_search.json
lib/kitsu-rs/test_data/anime/: 13401.json  46174.json  5.json  generate.py
lib/kitsu-rs/test_data/episodes/: 89.json  99605.json  generate.py
lib/kitsu-rs/test_data/searches/: 3-gatsu no Lion 2nd Season.json  3-gatsu_no_Lion_2nd_Season.json  5 Centimeter per Second.json  cowboy bebop.json  food.json  generate.py  hello.json  high.json
lib/remote-debian-install-rs/: Cargo.toml
lib/remote-debian-install-rs/src/: main.rs
lib/vidstreaming-cli-rs/: .gitignore  Cargo.toml
lib/vidstreaming-cli-rs/src/: commands.rs  main.rs
lib/vidstreaming-cli-rs/src/commands/: download.rs  info.rs  search.rs
lib/vidstreaming-rs/: Cargo.toml  build.rs
lib/vidstreaming-rs/src/: anime_type.rs  client.rs  episode.rs  lib.rs  search_results.rs  util.rs  video_player.rs
lib/vidstreaming-rs/test_data/episodes/: bleach-366.html
lib/vidstreaming-rs/test_data/searches/: bleach.html
lib/vidstreaming-rs/test_data/video_player/: iruma.html
server/: .gitignore  Cargo.toml
server/src/: config.rs  logger.rs  main.rs
server/src/app_state/: database.rs  kitsu.rs  vidstreaming.rs
server/src/routes/: api.rs
(+436 files in other folders)
