[workspace]
resolver = "2"
members = [
    "server",
    "xtask",
    "lib/*",
]

[patch.crates-io]
openssl-src = { git = "https://github.com/nathaniel-daniel/openssl-src-rs", branch = "fix-msvc-host-cross" }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "symbols"
panic = "abort"