[workspace]
resolver = "2"
members = [
    "server",
    "xtask",
    "lib/*",
]

[patch.crates-io]
openssl-src = { git = "https://github.com/alexcrichton/openssl-src-rs" }

[patch.'https://github.com/ThatAnnoyingKid/pikadick-rs']
async-rusqlite = { git = "https://github.com/adumbidiot/pikadick-rs", branch = "update" }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "symbols"
panic = "abort"