[workspace]
resolver = "2"
members = [
    "server",
    "xtask",
    "lib/*",
]

[patch.'https://github.com/ThatAnnoyingKid/pikadick-rs']
async-rusqlite = { git = "https://github.com/adumbidiot/pikadick-rs" }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "symbols"
panic = "abort"