[package]
name = "bewu"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.69"
async-rusqlite = { git = "https://github.com/ThatAnnoyingKid/pikadick-rs", features = [ "bundled" ] }
axum = "0.6.4"
bewu-util = { path = "../lib/bewu-util-rs", features = ["try-exists", "state-update-channel", "parse-ffmpeg-time"] }
fd-lock = "3.0.9"
kitsu = { path = "../lib/kitsu-rs", features = [ "rustls-tls" ], default-features = false }
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs" }
pikadick-util = { git = "https://github.com/ThatAnnoyingKid/pikadick-rs", features = [ "request_map", "arc_anyhow_error" ] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = [ "rt", "rt-multi-thread", "signal", "macros" ] }
tokio-ffmpeg-cli = { git = "https://github.com/ThatAnnoyingKid/pikadick-rs" }
tokio-stream = "0.1.11"
toml = "0.7.2"
tower = "0.4.13"
tower-http = { version = "0.3.5", features = [ "fs", "trace" ] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }
url = "2.3.1"
vidstreaming = { path = "../lib/vidstreaming-rs", features = [ "rustls-tls" ], default-features = false }
