[package]
name = "bewu"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.71"
async-rusqlite = { git = "https://github.com/ThatAnnoyingKid/pikadick-rs", features = [ "bundled" ] }
axum = "0.6.18"
bewu-util = { path = "../lib/bewu-util-rs", features = ["abort-join-handle", "state-update-channel", "parse-ffmpeg-time", "async-lock-file", "async-timed-lru-cache"] }
fd-lock = "3.0.12"
kitsu = { path = "../lib/kitsu-rs", features = [ "rustls-tls" ], default-features = false }
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs" }
pikadick-util = { git = "https://github.com/ThatAnnoyingKid/pikadick-rs", features = [ "arc_anyhow_error" ] }
serde = { version = "1.0.168", features = ["derive"] }
serde_json = "1.0.102"
tokio = { version = "1.29.1", features = [ "rt", "rt-multi-thread", "signal", "macros" ] }
tokio-ffmpeg-cli = { git = "https://github.com/ThatAnnoyingKid/pikadick-rs" }
tokio-stream = "0.1.14"
toml = "0.7.6"
tower = "0.4.13"
tower-http = { version = "0.4.2", features = [ "fs", "trace" ] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }
url = "2.4.0"
vidstreaming = { path = "../lib/vidstreaming-rs", features = [ "rustls-tls" ], default-features = false }
