[package]
name = "bewu"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
bewu-util = { path = "../lib/bewu-util-rs", features = [ "abort-join-handle", "state-update-channel", "parse-ffmpeg-time", "async-lock-file", "async-timed-lru-cache" ] }
fd-lock = "4.0.4"
kitsu = { path = "../lib/kitsu-rs", features = [ "rustls" ], default-features = false }
nd-async-rusqlite = { git = "https://github.com/nathaniel-daniel/nd-async-rusqlite-rs", features = [ "bundled", "fallible_uint" ] }
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", features = [ "arc-anyhow-error" ] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = [ "rt", "rt-multi-thread", "signal", "macros" ] }
tokio-ffmpeg-cli = { git = "https://github.com/ThatAnnoyingKid/pikadick-rs" }
tokio-stream = "0.1.18"
toml = "1.1.2"
tower = { version = "0.5.3" }
tower-http = { version = "0.6.11", features = [ "fs", "trace" ] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [ "env-filter" ] }
url = "2.5.8"
vidstreaming = { path = "../lib/vidstreaming-rs", features = [ "rustls" ], default-features = false }
