[package]
name = "bewu-util"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { version = "1.0.75", optional = true }
async-stream = { version = "0.3.5", optional = true }
fd-lock = { version = "4.0.0", optional = true }
hls-parser = { path = "../hls-parser-rs", optional = true }
lru = { version = "0.11.0", optional = true }
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", optional = true }
reqwest = { version = "0.11.18", default-features = false, optional = true }
tokio = { version = "1.31.0", optional = true }
tokio-ffmpeg-cli = { git = "https://github.com/ThatAnnoyingKid/pikadick-rs", optional = true }
tokio-stream = { version = "0.1.14", optional = true }
tokio-util = { version = "0.7.8", optional = true }

[features]
abort-join-handle = [
    "tokio",
    "tokio/rt",
]
async-lock-file = [
    "anyhow",
    "fd-lock",
    "tokio",
    "tokio/rt",
    "tokio/sync",
]
state-update-channel = [
    "tokio",
    "tokio/sync",
    "tokio-stream",
    "tokio-util",
]
parse-ffmpeg-time = [
    "anyhow",
]
async-timed-lru-cache = [
    "lru",
    "tokio",
    "tokio/sync",
]
async-timed-cache-cell = [
    "tokio",
    "tokio/sync",
]
download-hls = [
    "anyhow",
    "async-lock-file",
    "async-stream",
    "fd-lock",
    "hls-parser",
    "nd-util",
    "nd-util/download-to-path",
    "parse-ffmpeg-time",
    "reqwest",
    "tokio",
    "tokio/fs",
    "tokio-ffmpeg-cli",
    "tokio-stream",
]
