[package]
name = "bewu-util"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { version = "1.0.86", optional = true }
async-stream = { version = "0.3.5", optional = true }
fd-lock = { version = "4.0.2", optional = true }
hls-parser = { path = "../hls-parser-rs", optional = true }
lru = { version = "0.12.4", optional = true }
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", optional = true }
reqwest = { version = "0.12.5", default-features = false, optional = true }
tokio = { version = "1.38.1", optional = true }
tokio-ffmpeg-cli = { git = "https://github.com/ThatAnnoyingKid/pikadick-rs", optional = true }
tokio-stream = { version = "0.1.15", optional = true }
tokio-util = { version = "0.7.11", optional = true }

[dev-dependencies]
tokio = { version = "1.38.1", features = [ "macros", "time", "rt" ] }

[features]
abort-join-handle = [
    "dep:tokio",
    "tokio/rt",
]
async-lock-file = [
    "dep:anyhow",
    "dep:fd-lock",
    "dep:tokio",
    "tokio/rt",
    "tokio/sync",
]
state-update-channel = [
    "dep:tokio",
    "tokio/sync",
    "dep:tokio-stream",
    "dep:tokio-util",
]
parse-ffmpeg-time = [
    "dep:anyhow",
]
async-timed-lru-cache = [
    "dep:lru",
    "dep:tokio",
    "tokio/sync",
]
async-timed-cache-cell = [
    "dep:tokio",
    "tokio/sync",
]
download-hls = [
    "dep:anyhow",
    "async-lock-file",
    "dep:async-stream",
    "dep:fd-lock",
    "dep:hls-parser",
    "dep:nd-util",
    "nd-util/download-to-path",
    "parse-ffmpeg-time",
    "dep:reqwest",
    "dep:tokio",
    "tokio/fs",
    "dep:tokio-ffmpeg-cli",
    "dep:tokio-stream",
]
async-mutex-map = [
    "dep:tokio",
    "tokio/sync",
]
