[package]
name = "debian-sysroot-build"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
ar = "0.9.0"
argh = "0.1.13"
cargo_metadata = "0.23.0"
cfg-if = "1.0.3"
flate2 = "1.1.4"
fslock = "0.2.1"
rusqlite = { version = "0.37.0", features = [ "bundled" ] }
tar = "0.4.44"
ureq = "3.1.2"
xz2 = "0.1.7"
