[package]
name = "debian-sysroot-build"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.102"
ar = "0.9.0"
argh = "0.1.14"
cargo_metadata = "0.23.1"
cfg-if = "1.0.4"
flate2 = "1.1.9"
fslock = "0.2.1"
rusqlite = { version = "0.37.0", features = [ "bundled" ] }
tar = "0.4.44"
ureq = "3.2.0"
xz2 = "0.1.7"
