[package]
name = "deploy-deb"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.97"
argh = "0.1.13"
camino = "1.1.9"
indicatif = "0.17.11"
libc = "0.2.167"
# libssh-rs = { version = "0.1.3", features = [ "vendored", "vendored-openssl" ] }
libssh-rs = { git = "https://github.com/wez/libssh-rs", features = [ "vendored", "vendored-openssl" ] }
rand = "0.9.0"
rpassword = "7.3.1"
url = "2.5.4"
