[package]
name = "deploy-deb"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
argh = "0.1.13"
camino = "1.2.1"
indicatif = "0.18.0"
libc = "0.2.177"
# libssh-rs = { version = "0.1.3", features = [ "vendored", "vendored-openssl" ] }
libssh-rs = { git = "https://github.com/wez/libssh-rs", features = [ "vendored", "vendored-openssl" ] }
rand = "0.9.2"
rpassword = "7.4.0"
url = "2.5.7"
