[package]
name = "kitsu"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
json-api = { git = "https://github.com/adumbidiot/json_api-rs" }
serde = { version = "1.0.218", features = [ "derive" ] }
serde_json = "1.0.139"
thiserror = "2.0.11"
url = { version = "2.5.4", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.43.0", features = [ "macros" ] }

[features]
default = ["rustls-tls"]
native-tls = ["json-api/native-tls"]
rustls-tls = ["json-api/rustls-tls"]
