[package]
name = "kitsu"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
json-api = { git = "https://github.com/adumbidiot/json_api-rs", default-features = false }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.150"
thiserror = "2.0.18"
url = { version = "2.5.8", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.52.3", features = [ "macros" ] }

[features]
default = [ "rustls" ]
native-tls = [ "json-api/native-tls" ]
rustls = [ "json-api/rustls" ]
