[package]
name = "remote-debian-install"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.94"
argh = "0.1.12"
cargo_metadata = "0.18.1"
deploy-deb = { version = "0.0.0", path = "../deploy-deb-rs" }
indicatif = "0.17.9"
libssh-rs = { git = "https://github.com/wez/libssh-rs", features = [ "vendored", "vendored-openssl" ] }
rand = "0.8.5"
rand_chacha = "0.3.1"
seahash = "4.1.0"
