[package]
name = "remote-debian-install"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.95"
argh = "0.1.13"
cargo_metadata = "0.19.1"
deploy-deb = { version = "0.0.0", path = "../deploy-deb-rs" }
indicatif = "0.17.11"
libssh-rs = { git = "https://github.com/wez/libssh-rs", features = [ "vendored", "vendored-openssl" ] }
rand = "0.9.0"
rand_chacha = "0.9.0"
seahash = "4.1.0"
