[package]
name = "vidstreaming-cli"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
argh = "0.1.13"
bewu-util = { path = "../bewu-util-rs", features = [ "download-hls" ] }
indicatif = "0.18.2"
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs" }
reqwest = { version = "0.12.24", default-features = false }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [ "rt-multi-thread", "fs" ] }
tokio-stream = "0.1.17"
url = "2.5.7"
vidstreaming = { path = "../vidstreaming-rs" }
