[package]
name = "vidstreaming-cli"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.102"
argh = "0.1.19"
bewu-util = { path = "../bewu-util-rs", features = [ "download-hls" ] }
indicatif = "0.18.4"
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs" }
reqwest = { version = "0.13.3", default-features = false }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = [ "rt-multi-thread", "fs" ] }
tokio-stream = "0.1.18"
url = "2.5.8"
vidstreaming = { path = "../vidstreaming-rs" }
