[package]
name = "vidstreaming"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
block-modes = "0.9.1"
cbc = "0.1.2"
cipher = { version = "0.4.4", features = [ "std" ] }
itoa = "1.0.14"
once_cell = "1.20.2"
reqwest = { version = "0.12.9", features = [ "json" ], default-features = false }
scraper = { version = "0.21.0", default-features = false }
serde = { version = "1.0.215", features = [ "derive" ] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = [ "rt" ] }
url = { version = "2.5.4", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.41.1", features = [ "macros" ] }

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
