[package]
name = "vidstreaming"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]
aes = "0.9.0"
base64 = "0.22.1"
block-modes = "0.9.1"
cbc = "0.2.1"
cipher = { version = "0.5.2", features = [ "alloc" ] }
itoa = "1.0.18"
once_cell = "1.21.4"
reqwest = { version = "0.13.3", features = [ "json" ], default-features = false }
scraper = { version = "0.27.0", default-features = false }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [ "rt" ] }
url = { version = "2.5.8", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.52.3", features = [ "macros" ] }

[features]
default = ["rustls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]
